Interruption leaves KVDropPendingReaper in an invalid state

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2026-02-16
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      KVDropPendingReaper::dropIdentsOlderThan() calls checkForInterrupt() without any logic to perform the required cleanup if it throws. When this happens, dropPending is left as true on idents which are no longer in the process of being dropped, and a subsequent attempt to drop them will hit an invariant failure.

            Assignee:
            Thomas Goyne
            Reporter:
            Thomas Goyne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: