SERVER-119526 Clean up dropInProgress state when KVDropPendingReaper is interrupted (#47935)

GitOrigin-RevId: aa42956283dc30522522585dbfcb6fbc32a5a288